--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "authors": [
         {
             "name": "AJ Meireles",
-            "email": "alvaro.meireles@live.com"
+            "email": "alvinhooxd@gmail.com"
         }
     ],
     "type": "library",
     "require": {
-		"php": "^7.3"
+		"php": "^7.3",
+        "codeigniter/framework": "^4.0"
     },
     "require-dev": {
 		"phpunit/phpunit": "6.*"
