--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     ],
     "type": "library",
     "require": {
-		"php": "^7.3",
-        "codeigniter/framework": "^4.0"
+		"php": "^7.3"
     },
     "require-dev": {
 		"phpunit/phpunit": "6.*"
@@ -21,5 +20,7 @@
         "psr-4": {
             "AJMeireles\\OLV\\": "src/"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
